# flash-http

./: .gitignore  Cargo.toml  Dockerfile  README.md  bundled.scss  index.html  styles.css
.github/workflows/: release.yml
src/: app.rs  main.rs  quick.module.scss  quick.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/migrations/2024-03-31-154744_create_histories/: down.sql  up.sql
src-tauri/migrations/2024-03-31-183623_create_histories/: down.sql  up.sql
src-tauri/migrations/2024-03-31-184033_create_histories/: down.sql  up.sql
src-tauri/src/: db.rs  main.rs  model.rs  schema.rs
src-tauri/src/models/: http_response.rs
src/components/: body.module.scss  body.rs  form_data.module.scss  form_data.rs  header.module.scss  header.rs  header_cell.rs  mod.rs  params.module.scss  params.rs  response.module.scss  response.rs
src/layouts/: default.module.scss  default.rs  history.module.scss  history.rs  mod.rs
src/models/: history.rs  http_models.rs  mod.rs
src/pages/: mod.rs  quick.module.scss  quick.rs  quick_colors.rs
src/queries/: history.rs
src/utils/: http.rs  mod.rs  url.rs
