[package]
name = "flash-http-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.5", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
leptos_router = { version = "0.5", features = ["csr"] }
stylance = "0.3.0"
serde_json = "1.0.115"
url = "2.2.2"
hyper = "1.2.0"
leptos_query = { version = "0.5.3", features = ["csr"] }
leptos_reactive = "0.6.9"
strum_macros = "0.26.2"
leptos-use = "0.10.6"

[workspace]
members = ["src-tauri"]
