[package]
name = "flash-http"
version = "0.0.0"
description = "A minimal Http Client"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-http = "2.0.0-beta.3"
dirs = "5.0.1"
diesel = { version = "2.1.0", features = ["sqlite"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
serde_urlencoded = "0.7.1"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0-beta"
